done with the mid-winter break homework
Added locations to result. Changed Controller to update the locationManager with new location changes. DID NOT TEST